Fix bad font style collapse
Looks like you can actually combine just font-size and font-weight.

--- a/public/styles.css
+++ b/public/styles.css
@@ -53,7 +53,8 @@ h2 {
 
 h3 {
   border-bottom: 0.75px solid #777;
-  font: 700 16px;
+  font-size: 16px;
+  font-weight: 700;
   margin: 0.5rem 0 0 0;
 }
 
